REGRESSION: broken statistics
See screenshots
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %2.2.0
changed milestone to %2.2.0
- Author Owner
Added attachment:
- Jean-Baptiste Kempf assigned to @fcartegnie and unassigned @MigrationBot
assigned to @fcartegnie and unassigned @MigrationBot
- Developer
QT5 related.
- Author Owner
I feared you would say that :)
- Developer
commit 44902c2e Author: Francois Cartegnie fcvlcdev@free.fr Date: Sat Nov 29 12:17:27 2014 +0100
Qt: StatsView: don't scale line width (fix [#12853](https://code.videolan.org/videolan/vlc/-/issues/12853))
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
also #11967 (closed)
Please register or sign in to reply