Qt: StatsView: don't scale line width (fix #12853)